--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,40 @@
 
     <!-- This allows us to extend the head scripts in HTML docs that have special requirements -->
     {% block extend_head %}
-    
+
     {% endblock %}
 </head>
+<body>
+    <!-- This allows us to extend the nav bar in HTML docs that have special requirements -->
+    {% include 'partials/nav.html %}
+
+    <div class="div-container">
+
+        {% include 'partials/logo.html' %}
+
+        {% block content %}
+
+        {% endblock %}
+
+    </div>
+
+    <!-- visit https://code.jquery.com/ for jquery script  -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" 
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous">
+    </script>
+
+    <!-- https://cdnjs.com/libraries/toastr.js/latest -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" 
+    integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+
+    <!-- This allows us to extend the foot scripts in HTML docs that have special requirements -->
+    {% block extend_foot %}
+
+    {% endblock %}
+
+    <script> src="{% static 'main.js' %}"</script>
+
+</body>
 </html>
