--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
     </script>
 
     <!-- This allows us to extend the foot scripts in HTML docs that have special requirements -->
-    {% block extend_foot %}
+    {% block extend_footer %}
 
     {% endblock %}
 
